# Athlete-Space---Backend

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  API_DOCUMENTATION.md  ARCHITECTURE.md  DELETION_PLAN.md  MEMORY_ANALYSIS.md  OPTIMIZATIONS.md  README.md  SCHEDULER_ANALYSIS.md  SCHEMA_V2_MIGRATION_STATUS.md  TESTING_GUIDE.md  capacitor.config.json  delete.txt  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  run_cli.py  run_cli.sh  test_athlete_id_fix.py  test_athlete_id_fix_with_wait.py
api/: chat.py  ingestion_ui.py
app/: celery_app.py  db.py  main.py  models.py
app/analysis/: __init__.py  compliance.py  risk.py  simulation.py  trends.py
app/analytics/: api.py
app/api/: activities.py  admin_activities.py  admin_ingestion.py  admin_ingestion_status.py  admin_retry.py  admin_status.py  analytics.py  auth.py  auth_strava.py  calendar.py  coach.py  coach_chat.py  ingestion.py  ingestion_strava.py  integrations_strava.py  intelligence.py  me.py  plan.py  profile.py  state.py  strava.py  training.py  webhooks.py
app/athletes/: models.py
app/audit/: __init__.py  decision_log.py
app/calendar/: api.py  auto_match_service.py  conflicts.py  helpers.py  reconciliation.py  reconciliation_service.py  training_summary.py  view_helper.py  write_service.py
app/coach/: agent.py  api.py  api_chat.py  chat.py  clarification.py  coach_service.py  context_builder.py  context_management.py  contracts.py  conversation_store.py  errors.py  execution_guard.py  instructions.py  intent_router.py  intent_ux.py  intents.py  llm_client.py  mcp_client.py  mcp_health.py  models.py  orchestrator.py  orchestrator_agent.py  orchestrator_deps.py  orchestrator_response.py  progress.py  progress_emitter.py  progress_steps.py  responses.py  service.py  state_builder.py  vocabulary.py  vocabulary_examples.py  vocabulary_helpers.py  vocabulary_upgrade.py
app/config/: settings.py
app/core/: attribute_extraction.py  auth.py  auth_jwt.py  constraints.py  conversation_id.py  conversation_ownership.py  conversation_summary.py  encryption.py  llm.py  logger.py  memory_compactor.py  memory_config.py  memory_metrics.py  memory_middleware.py  message.py  observe.py  password.py  permissions.py  prompt_builder.py  prompt_history.py  redis_conversation_store.py  settings.py  slot_extraction.py  slot_gate.py  summarization_config.py  summarization_queue.py  summarization_trigger.py  system_memory.py  token_counting.py  token_guard.py  tool_names.py  tool_requirements.py  trace_metadata.py
app/db/: helpers.py  message_repository.py  models.py  schema_check.py  schema_v2_map.py  session.py
app/embeddings/: embedding_service.py  vector_store.py
app/explanations/: __init__.py  rationale.py
app/ingestion/: api.py  api_legacy.py  background_sync.py  climate_sampling.py  fetch_streams.py  file_parser.py  health_check.py  locks.py  quota_debug.py  quota_manager.py  save_activities.py  scheduler.py  sla.py  strava_ingestion.py  sync_scheduler.py  tasks.py
app/intelligence/: failures.py  runtime.py  store.py  triggers.py
app/knowledge/: __init__.py  contracts.py  normalizer.py  rag_adapter.py
app/metrics/: compliance.py  computation_service.py  daily_aggregation 2.py  daily_aggregation.py  data_quality.py  effort_computation.py  effort_service.py  load_computation.py  scheduled_recompute.py  training_load.py
app/models/: athlete_profile.py
app/onboarding/: __init__.py  extraction.py  persistence.py  schemas.py  service.py
app/orchestrator/: routing.py
app/pairing/: auto_pairing_service.py  delta_computation.py  manual_pairing_service.py  session_links.py
app/planner/: alert_conditions.py  calendar_persistence.py  constants.py  errors.py  guards.py  macro_plan.py  models.py  modify_day_simple.py  observability.py  philosophy_loader.py  philosophy_selector.py  plan_day_simple.py  plan_pipeline.py  plan_race_simple.py  plan_validator.py  query_builders.py  schemas.py  session_builder.py  session_template_selector.py  session_text_generator.py  validators.py  volume_allocator.py  week_structure.py  workout_builder.py
app/planning/: __init__.py  cache.py  context.py  contracts.py  errors.py  invariants.py  logging.py  phase.py  plan_race.py  validate.py
app/plans/: README.md  __init__.py  intent_rules.py  pace.py  types.py  validators.py  volume.py  week_planner.py
app/processing/: activity_climate_aggregator.py  cold_stress.py  heat_acclimation.py
cli/: README.md  bootstrap.py  cli.py  run_cli_setup.py  run_cli_setup.sh
docs/: FRONTEND_API_GUIDE.md
ingestion/: strava_ingestion.py
mcp/: README.md  STEP4_SUMMARY.md  tool_inventory.md
models/: activity.py  decision.py  nutrition_state.py  task.py  training_state.py
pipeline/: training_pipeline.py
scripts/: README_BACKFILL_PAIRING.md  README_TRAINING_LOAD_MIGRATION.md  RUN_B8_VALIDATION.md  add_composite_indexes.py  add_missing_planned_sessions_columns.sql  backfill_activity_titles.py  backfill_all_unpaired.py  backfill_attach_activities_to_workouts.py  backfill_calendar_sessions.py  backfill_climate_for_activities.py  backfill_coach_feedback_and_title.py  backfill_coach_feedback_for_planned_sessions.py  backfill_cold_stress.py  backfill_daily_decisions.py  backfill_daily_decisions_metadata.py  backfill_garmin.py  backfill_garmin_all_users.py  backfill_garmin_history_all_users.py  backfill_heat_acclimation.py  backfill_paired_activities.py  backfill_single_planned_session_workout.py  backfill_tss_and_load.py  backfill_unpaired_activities.py  backfill_workout_activity_links.py  backfill_workout_step_targets.py  backfill_workouts.py  backfill_workouts_for_matches.py  build_rag_index.py  check_database.py  check_planned_session_status.py  clean_user_data.py  create_dev_user.py  create_garmin_tables.sql  create_local_test_user.py  create_sample_training_data.py  create_test_user.py  diagnose_pairing_issues.py  fix_incorrect_pairings.py  fix_mispaired_activities.py  fix_template_indentation.py  (+133 more)
state/: training_state_builder.py
tests/: conftest.py
ui/: app.py
(+813 files in other folders)
