[project]
name = "virtus-ai"
version = "0.1.0"
description = "Virtus AI - Performance Intelligence & Coaching System"
requires-python = "<3.14,>=3.12"
readme = "README.md"
repository = "https://github.com/artachobruno/Athlete-Space---Backend.git"
dependencies = [
    # --- Core ---
    "pydantic~=2.12.3",
    "pydantic-settings~=2.6.0",
    "pyyaml<7.0.0,>=6.0.1",

    # --- API / Async ---
    "fastapi[standard]<1.0.0,>=0.115.8",
    "uvicorn<1.0.0,>=0.34.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",  # keep only if used elsewhere
    "pyjwt>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",
    "bcrypt==4.0.1",
    "passlib[bcrypt]==1.7.4",

    # --- LLM ---
    "openai~=2.8",
    "litellm~=1.80",
    "pydantic-ai>=0.0.14",
    "tenacity<9.0.0,>=8.3.0",
    "langchain>=0.1.16",
    "langchain-core>=0.1.45",
    "langchain-openai>=0.1.7",

    # --- Storage / Caching ---
    "redis~=7.0.1",
    "cashews[diskcache,redis]<8.0.0,>=7.4.3",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",  # PostgreSQL driver (required for production)

    # --- Observability / Logging ---
    "loguru<1.0.0,>=0.7.3",
    "python-json-logger<3.0.0,>=2.0.7",

    # --- Math / Analysis (Training State) ---
    "numpy>=2.0.0",
    "scipy<2.0.0,>=1.9.3",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.2",

    # --- Scheduling ---
    "apscheduler>=3.11.0",
]

[dependency-groups]
test = [
    "pytest<9.0.0,>=8.3.4",
    "pytest-asyncio<1.0.0,>=0.25.3",
    "pytest-cov<7.0.0,>=6.0.0",
    "pytest-mock<4.0.0,>=3.10.0",
    "pytest-xdist[psutil]>=3.8.0",
]

dev = [
    # --- Lint / Type / Format ---
    "ruff>=0.14.0",
    "pyright>=1.1.407",
    "pre-commit<4.0.0,>=3.2.0",

    # --- Profiling / Debug ---
    "coverage<8.0.0,>=7.3.2",
    "pyinstrument<5.0.0,>=4.7.3",
    "yappi<2.0.0,>=1.6.10",
    "snakeviz<3.0.0,>=2.2.0",

    # --- Utilities ---
    "typer<1.0.0,>=0.20.0",
    "faker>=37,<38",
]

# -------------------------------------------------------------------
# Ruff (lint + format)
# -------------------------------------------------------------------

[tool.ruff]
line-length = 140
preview = true
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # import sorting
    "TRY",   # try-except rules
    "B",     # flake8-bugbear
    "Q",     # enforce double quotes
    "C",     # comprehensions
    "D",     # docstrings
    "UP",    # pyupgrade
    "ARG",   # unused arguments
    "ASYNC", # async correctness
    "N",     # naming
    "TRY",   # exception handling
    "S",     # security (bandit subset)
    "SIM",   # simplifications
    "PERF",  # performance
    "PL",    # pylint-derived
    "RUF",   # ruff rules
    "ERA",   # dead code
    "PTH",   # pathlib
    "DTZ",   # timezone awareness
    "RET",   # return clarity
]
ignore = [
    "PLR2004",  # allow magic numbers
    "PLR0913",  # allow many params (DI-heavy)
    "PLR0915",  # allow long functions
    "PLR0911",  # allow many return statements
    "PLR0912",  # allow many branches (complex business logic)
    "PLR0914",  # allow many local variables (complex functions)
    "C901",     # allow high complexity (complex business logic)
    "TRY002",   # allow broad exceptions
    "TRY003",
    "SIM108",
    "D10",
    "D205",
    "D401",
    "F401",     # allow unused imports (conditional imports)
    "PLW0603",  # allow global variables (module-level caching)
    "UP047",    # allow datetime.utcnow() (legacy compatibility)
]
fixable = ["ALL"]
pydocstyle = { convention = "google" }

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "D",
    "S",
    "PL",
    "ARG",
    "ERA",
    "E402",  # Allow imports after sys.path modification
]
"__init__.py" = ["D"]
"__main__.py" = ["T201"]
"**/*.ipynb" = ["ALL"]
"ui/**/*.py" = ["UP017"]
"app/**/*.py" = ["UP017"]
"scripts/**/*.py" = ["E402", "S404", "S603", "S607"]  # Allow imports after sys.path modification, subprocess is safe in scripts
"app/db/session.py" = ["PLC0415"]  # Allow conditional import of psycopg2
"cli/**/*.py" = ["PLR0917", "S404", "S603", "S607"]  # Typer CLI commands require many parameters, subprocess is safe
"scripts/create_test_user.py" = ["S106"]  # Test tokens are placeholders, not real credentials
"scripts/create_dev_user.py" = ["S105"]  # Dev-only password, safe in dev script
"mcp/db_server/tools/context.py" = ["TRY301"]  # Direct raise is appropriate here
"mcp/db_server/main.py" = ["S104"]  # Binding to 0.0.0.0 is required for Render/cloud deployments
"mcp/fs_server/main.py" = ["S104"]  # Binding to 0.0.0.0 is required for Render/cloud deployments
"app/api/**/*.py" = ["B008"]  # FastAPI Depends() is safe in function defaults
"app/api/auth/auth_google.py" = ["TRY300"]  # RET505 correctly flags unnecessary else; TRY300 conflicts
"app/coach/executor/action_executor.py" = ["TRY300", "TRY301"]  # TRY300 conflicts with RET505; TRY301 - helper functions are appropriate here
"app/main.py" = ["E402"]  # Intentional - logging must be set up before imports to catch import-time issues

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

# -------------------------------------------------------------------
# Pyright (typing)
# -------------------------------------------------------------------

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Darwin"
reportMissingImports = false
typeCheckingMode = "basic"
reportImportCycles = "error"
reportMissingTypeStubs = false
reportFunctionMemberAccess = false
reportGeneralTypeIssues = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportPrivateImportUsage = false
reportUnknownMemberType = false
reportAttributeAccessIssue = false
reportCallIssue = false
venvPath = "."
venv = ".venv"
exclude = [
    "**/tests/**",
    "**/.venv",
    "**/venv",
    "**/__pycache__",
    "**/.pytest_cache",
    "**/build",
    "**/dist",
]

# -------------------------------------------------------------------
# Build
# -------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "pipeline", "state", "ingestion", "integrations", "scripts"]

# -------------------------------------------------------------------
# CLI entry points (optional but recommended)
# -------------------------------------------------------------------

[project.scripts]
virtus = "api.chat:app"
virtus-daily = "api.daily_brief:run"
virtus-ingest = "scripts.run_ingestion:main"
virtus-state = "scripts.run_state:main"
virtus-decisions = "scripts.run_decisions:main"

# -------------------------------------------------------------------
# pytest
# -------------------------------------------------------------------

[tool.pytest.ini_options]
pythonpath = ["."]
# Async test configuration (requires pytest-asyncio)
# Install test dependencies with: pip install -e ".[test]" or uv sync --group test
asyncio_mode = "auto"
